--- a/index.html
+++ b/index.html
@@ -5,8 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/assets/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="#">Artists</a></li>
+                <li><a href="#">Artwork</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+
+            <div class="contact">
+                <a target="_blank" href="https://maps.app.goo.gl/ZsWMB32pWm1yG5CU9">Commodo Consequat 23</a>
+                <a href="mailto:info@photos.io">info@photos.io</a>
+                <a href="tel:+46720000100">+46 720 000 100</a>
+            </div>
+        </nav>
+    </header>   
     
+    <main class="portfolio">
+        <section class="portfolio__overview">
+            <div class="portfolio__tag">
+                Portfolio
+            </div>
+            <div class="portfolio__title">
+                Dolly Parton
+            </div>
+            <div class="portfolio__description">
+                Islands in the stream. That is what we are. No one in between How can we be wrong Sail away with me. To another world. And we rely on each other, huhn hah
+            </div>
+        </section>
+
+        <section class="portfolio__images">
+            <div class="portfolio__image"><img src="" alt=""></div>
+            <div class="portfolio__image"><img src="" alt=""></div>
+            <div class="portfolio__image"><img src="" alt=""></div>
+            <div class="portfolio__image"><img src="" alt=""></div>
+            <div class="portfolio__image"><img src="" alt=""></div>
+            <div class="portfolio__image"><img src="" alt=""></div>
+        </section>
+    </main>
 </body>
 </html>
