--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+       <div class="toggle-menu"></div>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -43,12 +44,12 @@
         </section>
 
         <section class="portfolio__images">
-            <div class="portfolio__image"><img src="" alt=""></div>
-            <div class="portfolio__image"><img src="" alt=""></div>
-            <div class="portfolio__image"><img src="" alt=""></div>
-            <div class="portfolio__image"><img src="" alt=""></div>
-            <div class="portfolio__image"><img src="" alt=""></div>
-            <div class="portfolio__image"><img src="" alt=""></div>
+            <div class="portfolio__image"><img src="https://www.dummyimage.com/600x600/000/fff" alt=""></div>
+            <div class="portfolio__image"><img src="https://www.dummyimage.com/600x600/000/fff" alt=""></div>
+            <div class="portfolio__image"><img src="https://www.dummyimage.com/600x600/000/fff" alt=""></div>
+            <div class="portfolio__image"><img src="https://www.dummyimage.com/600x600/000/fff" alt=""></div>
+            <div class="portfolio__image"><img src="https://www.dummyimage.com/600x600/000/fff" alt=""></div>
+            <div class="portfolio__image"><img src="https://www.dummyimage.com/600x600/000/fff" alt=""></div>
         </section>
     </main>
 </body>
