--- a/index.html
+++ b/index.html
@@ -75,15 +75,6 @@
         </div>
     </main>
 
-    <script>
-       const burger = document.querySelector('.nav-button');
-       const nav = document.querySelector('.nav-container');
-
-       burger.addEventListener('click', function() {
-        nav.classList.toggle('menu-open');
-        burger.classList.toggle('menu-button-active');
-       });
-
-    </script>
+    <script src="/assets/app.js"></script>
 </body>
 </html>
