--- a/work/mountain-view.html
+++ b/work/mountain-view.html
@@ -47,15 +47,6 @@
             </div>
         </div>
     </main>
-    <script>
-       const burger = document.querySelector('.nav-button');
-       const nav = document.querySelector('.nav-container');
-
-       burger.addEventListener('click', function() {
-        nav.classList.toggle('menu-open');
-        burger.classList.toggle('menu-button-active');
-       });
-
-    </script>
+    <script src="/assets/app.js"></script>
 </body>
 </html>
