Add dark overlay with text on gallery image hover

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="/assets/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -48,28 +47,28 @@
 
         <div class="portfolio">
             <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
+                <a href="/work/mountain-view.html"><img src="https://www.dummyimage.com/300x300/000/fff" alt=""></a>
             </div>
             <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
+                <a href="#"><img src="https://www.dummyimage.com/300x300/000/fff" alt=""></a>
             </div>
             <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
+                <a href="#"><img src="https://www.dummyimage.com/300x300/000/fff" alt=""></a>
             </div>
             <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
+                <a href="#"><img src="https://www.dummyimage.com/300x300/000/fff" alt=""></a>
             </div>
             <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
+                <a href="#"><img src="https://www.dummyimage.com/300x300/000/fff" alt=""></a>
             </div>
             <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
+                <a href="#"><img src="https://www.dummyimage.com/300x300/000/fff" alt=""></a>
             </div>
             <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
+                <a href="#"><img src="https://www.dummyimage.com/300x300/000/fff" alt=""></a>
             </div>
             <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
+                <a href="#"><img src="https://www.dummyimage.com/300x300/000/fff" alt=""></a>
             </div>
         </div>
         </div>
