--- a/index.html
+++ b/index.html
@@ -1,80 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/styles.css">
+    <link rel="stylesheet" href="/assets/styles.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
-</head>
-<body>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <div class="nav-button">
-        </div>
+      <div class="nav-button"></div>
     </header>
     <div class="wrapper">
-        <div class="nav-container">
-            <div class="container">
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="#">Artists</a></li>
-                    <li><a href="#">Artwork</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
+      <div class="nav-container">
+        <div class="container">
+          <nav>
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="#">Artists</a></li>
+              <li><a href="#">Artwork</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
 
-            <div class="contact">
-                <div class="contact-item">Commodo Consequat 23</div>
-                <div class="contact-item">info@photos.io</div>
-                <div class="contact-item">+46 720 000 100</div>
-            </div>
-            </div>
+          <div class="contact">
+            <div class="contact-item">Commodo Consequat 23</div>
+            <div class="contact-item">info@photos.io</div>
+            <div class="contact-item">+46 720 000 100</div>
+          </div>
         </div>
+      </div>
     </div>
 
     <main>
-        <div class="container">
+      <div class="container">
         <div class="overview">
-            <div class="tag">Portfolio</div>
-            <div class="title">Dolly Parton</div>
-            <div class="description">Islands in the stream. That is what we are. No one in between How can we be wrong Sail away with me. To another world. And we rely on each other, huhn hah</div>
+          <div class="tag">Portfolio</div>
+          <div class="title">Dolly Parton</div>
+          <div class="description">
+            Islands in the stream. That is what we are. No one in between How
+            can we be wrong Sail away with me. To another world. And we rely on
+            each other, huhn hah
+          </div>
         </div>
 
         <div class="portfolio">
-            <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
-            </div>
-            <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
-            </div>
-            <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
-            </div>
-            <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
-            </div>
-            <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
-            </div>
-            <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
-            </div>
-            <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
-            </div>
-            <div class="portfolio-img">
-                <img src="https://www.dummyimage.com/300x300/000/fff" alt="">
-            </div>
+          <div class="portfolio-img">
+            <img
+              src="assets/images/ahmet-yuksek-MuB8snLj2xQ-unsplash.jpg"
+              alt="image 1"
+            />
+          </div>
+          <div class="portfolio-img">
+            <img
+              src="assets/images/alexandros-giannakakis-USTwdIXaltQ-unsplash.jpg"
+              alt="image 2"
+            />
+          </div>
+          <div class="portfolio-img">
+            <img
+              src="assets/images/hannah-reding-W03oy_FkuKw-unsplash.jpg"
+              alt="image 3"
+            />
+          </div>
+          <div class="portfolio-img">
+            <img
+              src="assets/images/junel-mujar-3fKdRnTBYkw-unsplash.jpg"
+              alt="image 4"
+            />
+          </div>
+          <div class="portfolio-img">
+            <img src="assets/images/patrick-hendry-kgQhJy9Gmqc-unsplash.jpg""
+            alt="image 5">
+          </div>
+          <div class="portfolio-img">
+            <img
+              src="assets/images/valeriia-andreeva-I_jZ_HSkt5o-unsplash.jpg"
+              alt="image 6"
+            />
+          </div>
+          <div class="portfolio-img">
+            <img
+              src="assets/images/kellen-riggin-wPcUkxEvVsQ-unsplash.jpg"
+              alt="image 7"
+            />
+          </div>
+          <div class="portfolio-img">
+            <img
+              src="assets/images/maximilian-zahn-bmMVWDxNUKk-unsplash.jpg"
+              alt="image 8"
+            />
+          </div>
         </div>
-        </div>
+      </div>
     </main>
 
     <script src="/assets/app.js"></script>
-</body>
+  </body>
 </html>
