Made portfolio work page responsive.

--- a/work/mountain-view.html
+++ b/work/mountain-view.html
@@ -34,9 +34,10 @@
             </div>
         </div>
     </div>
-    <main>
-        <div class="banner"></div>
-        <div class="container">
+    <main class="main-work">
+        <div class="banner">
+        </div>
+        <div class="container work-container">
             <div class="overview">
                 <div class="tag">Nature</div>
                 <div class="title">Tumble outta bed and stumble to the kitchen</div>
@@ -45,6 +46,7 @@
             </div>
         </div>
     </main>
+
     <script src="/assets/app.js"></script>
 </body>
 </html>
