--- a/work/mountain-view.html
+++ b/work/mountain-view.html
@@ -1,52 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-</head>
-<body>
-   <header>
-        <div class="nav-button">
-        </div>
+    <link rel="stylesheet" href="/assets/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <div class="nav-button"></div>
     </header>
     <div class="wrapper">
-        <div class="nav-container">
-            <div class="container">
-            <nav>
-                <ul>
-                    <li><a href="/">Home</a></li>
-                    <li><a href="#">Artists</a></li>
-                    <li><a href="#">Artwork</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
+      <div class="nav-container">
+        <div class="container">
+          <nav>
+            <ul>
+              <li><a href="/">Home</a></li>
+              <li><a href="#">Artists</a></li>
+              <li><a href="#">Artwork</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
 
-            <div class="contact">
-                <div class="contact-item">Commodo Consequat 23</div>
-                <div class="contact-item">info@photos.io</div>
-                <div class="contact-item">+46 720 000 100</div>
-            </div>
-            </div>
+          <div class="contact">
+            <div class="contact-item">Commodo Consequat 23</div>
+            <div class="contact-item">info@photos.io</div>
+            <div class="contact-item">+46 720 000 100</div>
+          </div>
         </div>
+      </div>
     </div>
     <main class="main-work">
-        <div class="banner">
+      <div class="banner"></div>
+      <div class="container work-container">
+        <div class="overview">
+          <div class="tag">Nature</div>
+          <div class="title">Tumble outta bed and stumble to the kitchen</div>
+          <div class="author">By: Dolly Parton</div>
+          <div class="description">
+            All you got to do is smile that smile. And there go all my defenses.
+            Just leave it up to you and in a little while. You're messing' up my
+            mind and filling' up my senses.
+          </div>
         </div>
-        <div class="container work-container">
-            <div class="overview">
-                <div class="tag">Nature</div>
-                <div class="title">Tumble outta bed and stumble to the kitchen</div>
-                <div class="author">By: Dolly Parton</div>
-                <div class="description">All you got to do is smile that smile. And there go all my defenses. Just leave it up to you and in a little while. You're messing' up my mind and filling' up my senses.</div>
-            </div>
-        </div>
+      </div>
     </main>
 
     <script src="/assets/app.js"></script>
-</body>
+  </body>
 </html>
