--- a/work/mountain-view.html
+++ b/work/mountain-view.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Dolly Parton Work</title>
+
+    <meta property="og:title" content="Dolly Parton" />
+    <meta property="og:description" content="The page is a portfolio website for Dolly Parton." />
+    <meta property="og:url" content="/" />
+    <meta property="og:image" content="/ahmet-yuksek-MuB8snLj2xQ-unsplash" />
+
     <link rel="stylesheet" href="/assets/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
